=============================================================
Version 3.0.6
=============================================================

    - Bugfix: [export] Improved deletion of duplicate headers

=============================================================
Version 3.0.5
=============================================================

    - Bugfix: [export] Deleting duplicate fields case-sensitive
    - Bugfix: [export] Add default value for excluded products array
    - Bugfix: [export] Recovering parent images when no image is selected for the combination
    - Bugfix: [export] Retrieving a default id_lang for product selection

=============================================================
Version 3.0.4
=============================================================de l

    - Feature: Adding links to the new Lengow help center
    - Feature: [action] Generating a generic error message when the Lengow API is unavailable
    - Bugfix: [export] Data recovery for custom fields
    - Bugfix: [import] Send email enabled for the report email
    - Bugfix: [import] Array to string conversion for order comments
    - Bugfix: [export] Modifying Legacy Fields for Image Fields
    - Bugfix: [import] New parameter in updateQty() function for version 1.7.3
    - Bugfix: [import] Improved security to avoid duplicate synchronization
    - Bugfix: [export] Product is ignored when it has faulty combinations

=============================================================
Version 3.0.3
=============================================================

    - Feature: [import] Improved logs on carrier matching
    - Bugfix: Switching from boolean to integer for checkbox type data
    - Bugfix: Additional verification for non-case sensitive Databases
    - Bugfix: [export] Improved recovery of the store's export settings

=============================================================
Version 3.0.2
=============================================================
